--- a/index.html
+++ b/index.html
@@ -29,10 +29,26 @@
         </div>
 
         <div class="nav-menu">
-          <button class="btn"><i class="fad fa-bars"></i></button>
+          <button class="btn" id="open-btn"><i class="fad fa-bars"></i></button>
         </div>
       </section>
     <!-- ===//end of page-header section === -->
+
+    <!-- === side-nav start === -->
+    <div class="side-nav shadow-lg">
+      <div class="main-nav">
+        <div class="text-right close-btn-box">
+          <button class="btn close-btn" id="close-btn"><i class="fas fa-sign-out"></i></button>
+        </div>
+        <ul>
+          <li><a href="#" class="active"><i class="fal fa-home"></i> <span> Home</span></a></li>
+          <li><a href="#"><i class="fal fa-address-book"></i><span> About me</span></a></li>
+          <li><a href="#"><i class="fal fa-file-image"></i><span> Gallery</span></a></li>
+          <li><a href="#"><i class="fal fa-tag"></i> <span>Follow</span></a></li>
+        </ul>
+      </div>
+    </div>
+    <!-- ===// end of side-nav === -->
 
 
     <!-- === tab-menu section start === -->
